--- a/style.css
+++ b/style.css
@@ -3,29 +3,49 @@
     padding: 0;
     box-sizing: border-box;
 }
-.container{
-    width: 100%;
-    height: 500px;
+.etseg{ 
+    width: 100vw;
+    height:500px;
     
-    background-color: aqua;
 }
-.container .image{
- width: 20%;
- height: 50%;
-float: right;
- 
+.child-1{
+    width: 30vw;
+    height: 30%;
+    float: left;
 }
-.container .image img{
+.child-1 img{
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
-.container .text{
-    width: 79%;
-    height: 50%;
-    float: left;
+.child-2{
+    width: 69%;
+    height: 20%;
+    float: right;
 
 }
-.clear{
+.clr{
     clear: both;
+}
+.big-text{
+    width: 100%;
+    background-color: chartreuse;
+    margin: 1px;
+}
+.big-text h1{
+    text-transform: uppercase;
+    font-size: 20px;
+    padding: 1em;
+}
+.second-two{
+    width: 100vw;
+
+}
+.second-two .pictur{
+    width: 30%;
+    float:right;
+}
+.second-two .pictur img{
+    width: 100%;
+    object-fit: contain;
 }
