--- a/style.css
+++ b/style.css
@@ -3,12 +3,16 @@
     padding: 0;
     margin: 0;
 }
+body{
+    background-color: #1d1d1d;
+}
 nav{
     width: 100%;
     height: 61px;
     background-color: #1d1d1d;
     display: flex;
     justify-content: space-between;
+    border-bottom: 3px solid #393939;
 }
 nav .logo{
     width: 20%;
@@ -41,4 +45,29 @@ nav .logo img{
     color: #999;
    font-size: 18px;
    
+}
+.bars{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.bars .tses{
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    top: 60px;
+    display: none;
+}
+.bars .tses ul{
+    display: block;
+}
+.bars .tses ul li{
+    color: white;
+    list-style: none;
+}
+#checkbox:checked .tses{
+    display: block;
+}
+#checkbox{
+    display: none;
 }
